kubernetes/easyshop-service.yml
apiVersion: v1
kind:  Service
metadata:
  name: easyshop-svc
  namespace: easyshop-ns

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app: easyshop
