kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easyshop-ns
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    
spec:
  tls:
    - hosts:
        - snehaldevopsengineer.online
      secretName: easyshop-tls-secret
    
  rules:
    - host: snehaldevopsengineer.online
      http: # No 'host:' line here
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: easyshop-svc
              port:
                number: 80
